<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ssaurel.tictactoe.MainActivity">

    <com.ssaurel.tictactoe.BoardView
        android:id="@+id/board"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_centerInParent="true" />

    <EditText
        android:hint="Enter Username (Limited to 5 letters)"
        android:id="@+id/Textchange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/board"
        android:layout_centerHorizontal="true"

        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Set Username"
        android:layout_below="@+id/board"
        android:layout_centerHorizontal="true"
        android:id="@+id/btnChange"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Tic Tac Toe"
        android:layout_centerHorizontal="true"
        android:id="@+id/User"
        />



</RelativeLayout>